--- a/.github/workflows/daily_monitor.yml
+++ b/.github/workflows/daily_monitor.yml
@@ -2,9 +2,8 @@ name: Daily Email Scanner
 
 on:
   schedule:
-    - cron: '0 3,7,10,13,16,23 * * *'
-  
-  # 允许手动点击按钮触发
+    # 北京时间 7, 11, 18, 24 点
+    - cron: '0 3,10,16,23 * * *'
   workflow_dispatch:
 
 permissions:
@@ -18,46 +17,47 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 🟢 第一步：安装并启动 Cloudflare WARP (黑魔法)
+      # 这会改变运行环境的出口 IP，试图绕过 403/五秒盾
+      - name: Set up Cloudflare WARP
+        uses: fscarmen/warp-on-actions@v1.3
+        with:
+          stack: dual  # 启用双栈 (IPv4 + IPv6)
+
+      - name: Check New IP (Optional)
+        run: |
+          echo "查看当前伪装后的 IP："
+          curl -s https://ip.gs
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip' # 🟢 开启缓存加速
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 🟢 运行前先检查语法，防止低级错误浪费时间
       - name: Syntax Check
         run: python -m py_compile src/email_bot.py
 
       - name: Run Email Bot
         env:
-          # 务必在仓库 Settings -> Secrets 中配置这些变量
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
           LLM_MODEL_NAME: ${{ secrets.LLM_MODEL_NAME }}
-          # 强制 Python 实时输出日志，不要缓存
           PYTHONUNBUFFERED: "1"
         run: python src/email_bot.py
 
-      # 🟢 自动保存数据库变动 (核心功能)
       - name: Commit and Push Data
         run: |
-          # 配置 Git 身份
           git config --global user.name 'Paper-Bot-Action'
           git config --global user.email 'action@github.com'
-          
-          # 拉取最新代码防止冲突
           git pull origin main || echo "No remote changes"
-          
-          # 添加数据文件
           git add data/*.json || echo "No data files found"
-          
-          # 检查是否有变动
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m "📝 Update bot history & queue [skip ci]"
             git push
